<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calcFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".CalcFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/fondo"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tvMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom|end"
        android:paddingLeft="35sp"
        android:paddingRight="35sp"
        android:text=""
        android:textAlignment="gravity"
        android:textColor="#AAAAAA"
        android:textSize="16sp"
        android:translationY="80dp" />

    <TextView
        android:id="@+id/tvPantalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="bottom|end"
        android:paddingLeft="35sp"
        android:paddingRight="35sp"
        android:text="@string/Pantalla"
        android:textAlignment="gravity"
        android:textColor="#EAEAEA"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationY="150dp" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:translationY="200dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_span="3"
                android:layout_weight="1"
                android:backgroundTint="@color/light_gray"
                android:baselineAligned="false"
                android:text="@string/clear"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_orange"
                android:onClick="pressOp"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/siete"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/ocho"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/nueve"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btMult"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_orange"
                android:onClick="pressOp"
                android:text="@string/mult"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/cuatro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/cinco"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/seis"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btMen"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_orange"
                android:onClick="pressOp"
                android:text="@string/menos"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/uno"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/dos"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/tres"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btMas"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_orange"
                android:onClick="pressOp"
                android:text="@string/mas"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button
                android:id="@+id/bt0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_marginBottom="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:onClick="onClickNumber"
                android:text="@string/cero"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey_30"
                android:text="@string/decimal"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btIgu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_orange"
                android:text="@string/igual"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</FrameLayout>