<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_700"
    tools:context=".DadosFragment">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationY="50dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="horizontal"
        android:translationY="150dp">

        <ImageView
            android:id="@+id/imvDado1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            app:srcCompat="@drawable/dice6" />

        <ImageView
            android:id="@+id/imvDado2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            app:srcCompat="@drawable/dice6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:orientation="horizontal"
        android:translationY="350dp">

        <TextView
            android:id="@+id/tvPlayer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/player1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPlayer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/player2"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btnround"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_play"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:translationY="500dp"
        tools:ignore="TextContrastCheck" />

</FrameLayout>